js alert message add.

--- a/index.html
+++ b/index.html
@@ -177,6 +177,9 @@
         <p>Copyright &copy; iBlog.com </p>
         <a href="https://www.vecteezy.com/free-vector/typewriter">Vector Credits: Vecteezy</a>
     </div>
+    <script src="#">
+        alert('This page is created by Codewithharry');
+    </script>
 </body>
 
 </html>
